Bug 1298318 - Add mIsPaintingSVGImageElement to operator==() and Hash() in SVGImageContext. r=dholbert, a=ritu

MozReview-Commit-ID: Ji5tM02ykAp